
[package]
name = "trilier-server"
version = "0.1.0"
authors = ["Scqr Inc. <dev@scqr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = ""
repository = ""
license = "ISC"

[dependencies]
dotenv = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
actix-web = "3"
actix-files = "*"
ureq = "*"
