
[package]
name = "app-wasm"
version = "0.1.0"
authors = ["Scqr Inc. <dev@scqr.net>"]
edition = "2018"

description = ""
repository = ""
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
#wasm-bindgen = "0.2.63"
# --- custom start ---
wasm-bindgen = { version = "*", features = ["serde-serialize"]  }
js-sys = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = [
    "Window", "Document", "Node", "NodeList", "Element", "HtmlInputElement", "HtmlFormElement", "DomTokenList", "Event",
    "Headers", "Request", "RequestInit", "Response",
    "console"
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
chrono = { version = "*", features = ["wasmbind"] }
# --- custom end ---

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
